[gd_scene load_steps=19 format=2]

[ext_resource path="res://Skripte/Einstellungen.gd" type="Script" id=1]
[ext_resource path="res://Audio/UI/Pt.wav" type="AudioStream" id=2]
[ext_resource path="res://Fonts/DejaVuSans/DejaVuSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Audio/UI/Zt.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=5]
[ext_resource path="res://Texturen/Slider/Grabber.png" type="Texture" id=6]
[ext_resource path="res://Texturen/Slider/Slider.png" type="Texture" id=7]
[ext_resource path="res://Texturen/Slider/Tick.png" type="Texture" id=8]
[ext_resource path="res://Texturen/Symbole/Checkbox.png" type="Texture" id=10]

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;

uniform float blur : hint_range(0, 6) = 1.5;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )
shader_param/blur = 2.0

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.796078, 0.796078, 0.796078, 0.788235 )
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="DynamicFont" id=25]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 0.847059 )
border_color = Color( 0.705882, 0.705882, 0.705882, 1 )
shadow_color = Color( 0, 0, 0, 0.0941176 )
shadow_size = 12

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 946, 28 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 946, 28 )
modulate_color = Color( 0.509804, 0.509804, 0.509804, 1 )

[sub_resource type="DynamicFont" id=32]
size = 42
font_data = ExtResource( 3 )

[node name="Einstellungen" type="Button"]
material = SubResource( 27 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1920.0
margin_bottom = 1216.0
theme = ExtResource( 5 )
custom_styles/disabled = SubResource( 28 )
disabled = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/disabled = SubResource( 28 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="EinstellungsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_top = 8.0
margin_right = 324.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_fonts/font = SubResource( 25 )
text = "Einstellungen:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="Button" parent="."]
margin_top = 128.0
margin_right = 1080.0
margin_bottom = 224.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
text = "   Ingame Sound"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnOff" type="Sprite" parent="AudioButton"]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 960, 48 )
rotation = 3.14159
scale = Vector2( 0.333562, 0.353758 )
texture = ExtResource( 10 )

[node name="AudioButton2" type="Button" parent="AudioButton"]
margin_left = 851.0
margin_right = 1080.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
action_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UiAudioButton" type="Button" parent="."]
margin_top = 240.0
margin_right = 1080.0
margin_bottom = 336.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
text = "   UI Sound"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnOff" type="Sprite" parent="UiAudioButton"]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 960, 48 )
rotation = 3.14159
scale = Vector2( 0.333562, 0.353758 )
texture = ExtResource( 10 )

[node name="UiAudioButton2" type="Button" parent="UiAudioButton"]
margin_left = 851.0
margin_right = 1080.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
action_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vibration" type="Button" parent="."]
margin_top = 352.0
margin_right = 1080.0
margin_bottom = 448.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
text = "   Vibration"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnOff" type="Sprite" parent="Vibration"]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 960, 48 )
rotation = 3.14159
scale = Vector2( 0.333562, 0.353758 )
texture = ExtResource( 10 )

[node name="Vibration2" type="Button" parent="Vibration"]
margin_left = 851.0
margin_right = 1080.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
action_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotieren" type="Button" parent="."]
margin_top = 464.0
margin_right = 1080.0
margin_bottom = 560.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
text = "   Rotieren"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnOff" type="Sprite" parent="Rotieren"]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
position = Vector2( 960, 48 )
rotation = 3.14159
scale = Vector2( 0.333562, 0.353758 )
texture = ExtResource( 10 )

[node name="Rotieren2" type="Button" parent="Rotieren"]
margin_left = 851.0
margin_right = 1080.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true
action_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -473.0
margin_top = 640.0
margin_right = 473.0
margin_bottom = 682.0
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 29 )
custom_styles/grabber_area_highlight = SubResource( 30 )
custom_styles/grabber_area = SubResource( 30 )
max_value = 40.0
step = 4.0
value = 24.0
rounded = true
tick_count = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="MusicSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.0
margin_top = -56.0
margin_right = 348.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_fonts/font = SubResource( 32 )
text = "Musiklautst√§rke"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenshakeSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -473.0
margin_top = 768.0
margin_right = 473.0
margin_bottom = 810.0
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 29 )
custom_styles/grabber_area_highlight = SubResource( 30 )
custom_styles/grabber_area = SubResource( 30 )
max_value = 20.0
step = 2.0
value = 16.0
rounded = true
tick_count = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenshakeLabel" type="Label" parent="ScreenshakeSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.0
margin_top = -56.0
margin_right = 348.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_fonts/font = SubResource( 32 )
text = "Bildschirmwackeln"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerschiebungSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -473.0
margin_top = 896.0
margin_right = 473.0
margin_bottom = 938.0
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 29 )
custom_styles/grabber_area_highlight = SubResource( 30 )
custom_styles/grabber_area = SubResource( 30 )
max_value = 220.0
step = 22.0
rounded = true
tick_count = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerschiebungLabel" type="Label" parent="VerschiebungSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.0
margin_top = -56.0
margin_right = 348.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_fonts/font = SubResource( 32 )
text = "UI-Verschiebung"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0
bus = "UI"

[node name="Schiebsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
bus = "UI"

[connection signal="button_down" from="AudioButton/AudioButton2" to="." method="einst_button_sound"]
[connection signal="toggled" from="AudioButton/AudioButton2" to="." method="_on_AudioButton_toggled"]
[connection signal="button_down" from="UiAudioButton/UiAudioButton2" to="." method="einst_button_sound"]
[connection signal="toggled" from="UiAudioButton/UiAudioButton2" to="." method="_on_UiAudioButton2_toggled"]
[connection signal="button_down" from="Vibration/Vibration2" to="." method="einst_button_sound"]
[connection signal="toggled" from="Vibration/Vibration2" to="." method="_on_Vibration_toggled"]
[connection signal="button_down" from="Rotieren/Rotieren2" to="." method="einst_button_sound"]
[connection signal="toggled" from="Rotieren/Rotieren2" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="ScreenshakeSlider" to="." method="_on_ScreenshakeSlider_value_changed"]
[connection signal="value_changed" from="VerschiebungSlider" to="." method="_on_VerschiebungSlider_value_changed"]
